add more logic and update swagger
